<?xml version="1.0"?>
<package>
  <name>keyboard_input</name>
  <version>0.1.0</version>
  <description>The keyboard_input package</description>

  <maintainer email="ras@todo.todo">ras</maintainer>

  <license>BSD</license>

  <url type="website">http://wiki.ros.org/teleop_twist_keyboard</url>

  <author>Graylin Trevor Jay</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_depend>geometry_msgs</build_depend>

  <run_depend>geometry_msgs</run_depend>
  <run_depend>rospy</run_depend>
</package>
